@startuml

entity Role {
    * id: string(255) <<PK>>
    ---
    * name: string(255)
}

entity User {
    * id: string(255) <<PK>>
    ---
    * name: string(255)
    * email: string(255)
    * password: string(255)
    * credit: number
    gender: enum
    birth_date: date
    phone: string
    ---
    * role_id: string <<FK>>
}

entity Room {
    * id: string(255) <<PK>>
    ---
    * name: string(255)
    * price: number
    * location: string(255)
    ---
    * owner_id: string(255) <<FK>>
}

entity Room_Detail {
    * id: string(255) <<PK>>
    ---
    * name: string(255)
    ---
    * room_id: string(255) <<FK>>
}

entity Room_Discussion {
    * id: string(255) <<PK>>
    ---
    * message: text
    ---
    * room_id: string(255) <<FK>>
    * user_id: string(255) <<FK>>
}

Role ||--|{ User
User ||--o{ Room
Room ||--|{ Room_Detail
Room ||--o{ Room_Discussion
User ||--o{ Room_Discussion

@enduml
